added pointers to the different repos

--- a/index.html
+++ b/index.html
@@ -33,10 +33,23 @@
 <p>This Github organization hosts a set of prototypes that aim at investigating the engineering and emergence of software diversity in collaborative adaptive systems.
 The work of this organization is supported by the FP7 STREP <a href="http://diversify-project.eu/">DIVERSIFY project</a></p>
 
+
+<h3>The DIVERSIFY codebase</h3>
+
+<p>
+  <ul>
+    <li>We experiment the mergence of diversity in  bipartite software relations and the role of diversity on the robustness of software interactions, in the presence of perturbations. These experiments are performed in a multi-agent simulation platform : <a href="https://github.com/DIVERSIFY-project/Diversim">https://github.com/DIVERSIFY-project/Diversim</a></li>
+    <li>We experiment a novel form of software diversification, which consists in synthesizing variants of a program, which exhibit the same expected behavior, but have different implementations. These variants are called sosies and the sosie synthesis prototype is based on AST rewriting: <a href="https://github.com/DIVERSIFY-project/sosies-generator">https://github.com/DIVERSIFY-project/sosies-generator</a>. We manipulate the AST with <a href="https://github.com/DIVERSIFY-project/spoon">SPOON</a> </li>
+    <li>We experiment different strategies to control the propagation of diversity in populations: <a href="http://www.cs.unm.edu/~forrest/classes/readings/stelios-3.pdf">http://www.cs.unm.edu/~forrest/classes/readings/stelios-3.pdf</a></li>
+    <li>We have implemented a prototype for loop perforation in Java programs: <a href="https://github.com/DIVERSIFY-project/loop-perforation">https://github.com/DIVERSIFY-project/loop-perforation</a>. This is based on the paper by Misailovic et al. <a href="http://www.cs.unm.edu/~forrest/classes/readings/stelios-3.pdf">Quality of service profiling</a> </li>
+  </ul>
+</p>
+
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>André Elie (<a href="https://github.com/aelie" class="user-mention">@aelie</a>), Olivier Barais (<a href="https://github.com/barais" class="user-mention">@barais</a>), Benoit Baudry (<a href="https://github.com/bbaudry" class="user-mention">@bbaudry</a>), Cendrine Mony (<a href="https://github.com/cendrinemony" class="user-mention">@cendrinemony</a>), Benoit Combemale (<a href="https://github.com/combemale" class="user-mention">@combemale</a>), Erwan Daubert (<a href="https://github.com/edaubert" class="user-mention">@edaubert</a>), Franck Chauvel (<a href="https://github.com/fchauvel" class="user-mention">@fchauvel</a>), Franck Fleurey (<a href="https://github.com/ffleurey" class="user-mention">@ffleurey</a>), Benoit Gauzens (@bgauzens), Johann Bourcier (<a href="https://github.com/jbourcie" class="user-mention">@jbourcie</a>), Kwaku Yeboah-Antwi (<a href="https://github.com/Killeroid" class="user-mention">@Killeroid</a>), Marco Biazzini (@marbiaz), Carlos Melian (@melian009), Martin Monperrus (@monperrus), Myriam David (@myrdavid), Simon Allier (@simonbAllier), Hui Song (@songhui), Vivek Nallur (@viveknallur)</p>
+
       </section>
     </div>
 
