--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/DIVERSIFY-project">View on GitHub</a>
 
           <h1 id="project_title">Diversify-project</h1>
-          <h2 id="project_tagline">Experiments for emerging software diversity</h2>
+          <h2 id="project_tagline">Exploring the synthesis of software diversity</h2>
 
         </header>
     </div>
