--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@ The work of this organization is supported by the FP7 STREP <a href="http://dive
 
 <p>
   <ul>
-    <li>We experiment the mergence of diversity in  bipartite software relations and the role of diversity on the robustness of software interactions, in the presence of perturbations. These experiments are performed in a multi-agent simulation platform : <a href="https://github.com/DIVERSIFY-project/Diversim">https://github.com/DIVERSIFY-project/Diversim</a></li>
-    <li>We experiment a novel form of software diversification, which consists in synthesizing variants of a program, which exhibit the same expected behavior, but have different implementations. These variants are called sosies and the sosie synthesis prototype is based on AST rewriting: <a href="https://github.com/DIVERSIFY-project/sosies-generator">https://github.com/DIVERSIFY-project/sosies-generator</a>. We manipulate the AST with <a href="https://github.com/DIVERSIFY-project/spoon">SPOON</a>
+    <li><strong>Diversity emergence simulation.</strong> We experiment the mergence of diversity in  bipartite software relations and the role of diversity on the robustness of software interactions, in the presence of perturbations. These experiments are performed in a multi-agent simulation platform.
+      <a href="https://github.com/DIVERSIFY-project/Diversim">https://github.com/DIVERSIFY-project/Diversim</a></li>
+    <li><strong>Source code diversity synthesis.</strong> We experiment a novel form of software diversification, which consists in synthesizing variants of a program, which exhibit the same expected behavior, but have different implementations. These variants are called sosies and the sosie synthesis prototype is based on AST rewriting: <a href="https://github.com/DIVERSIFY-project/sosies-generator">https://github.com/DIVERSIFY-project/sosies-generator</a>. 
       The programs that we use for sosiefication are available <a href=" http://diversify-project.eu/sosified-programs/">here</a>.
       </li>
-    <li>We experiment different strategies to control the propagation of diversity in populations: <a href="http://www.cs.unm.edu/~forrest/classes/readings/stelios-3.pdf">http://www.cs.unm.edu/~forrest/classes/readings/stelios-3.pdf</a></li>
-    <li>We have implemented a prototype for loop perforation in Java programs: <a href="https://github.com/DIVERSIFY-project/loop-perforation">https://github.com/DIVERSIFY-project/loop-perforation</a>. This is based on the paper by Misailovic et al. <a href="http://www.cs.unm.edu/~forrest/classes/readings/stelios-3.pdf">Quality of service profiling</a> </li>
+    <li><strong>Demo of stacked diversity.</strong> We have deployed a JS application that runs on top of a diversified web server: <a href="https://github.com/DIVERSIFY-project/diversify-demos">https://github.com/DIVERSIFY-project/diversify-demos</a>. </li>  
+    <li><strong>Java loops perforation.</strong> We have implemented a prototype for loop perforation in Java programs: <a href="https://github.com/DIVERSIFY-project/loop-perforation">https://github.com/DIVERSIFY-project/loop-perforation</a>. This is based on the paper by Misailovic et al. <a href="http://www.cs.unm.edu/~forrest/classes/readings/stelios-3.pdf">Quality of service profiling</a> </li>
   </ul>
 </p>
 
