--- a/index.html
+++ b/index.html
@@ -1,71 +1,65 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Diversify-project : Experiments for emerging software diversity" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Diversify-project</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/DIVERSIFY-project">View on GitHub</a>
-
-          <h1 id="project_title">Diversify-project</h1>
-          <h2 id="project_tagline">Exploring the synthesis of software diversity</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="the-diversify-project-organization" class="anchor" href="#the-diversify-project-organization"><span class="octicon octicon-link"></span></a>The DIVERSIFY-project organization</h1>
-
-<p>This Github organization hosts a set of prototypes that aim at investigating the engineering and emergence of software diversity in collaborative adaptive systems.
-The work of this organization is supported by the FP7 STREP <a href="http://diversify-project.eu/">DIVERSIFY project</a></p>
+<title>Mon site - DiverSE</title>
+<meta property="og:site_name" content="Mon site">
+<meta property="og:title" content="Mon site">
+<meta property="og:description" content="Demo of stacked diversity. We have deployed a JS application that runs on top of a diversified web server: https://github.com/DIVERSIFY-project/diversify-demos . Demo of a smart application for urban...">
+<meta property="og:url" content="http://testdiverse.weebly.com/">
 
 
-<h3>The DIVERSIFY codebase</h3>
 
-<p>
-  <ul>
-    <li><strong>Demo of stacked diversity.</strong> We have deployed a JS application that runs on top of a diversified web server: <a href="https://github.com/DIVERSIFY-project/diversify-demos">https://github.com/DIVERSIFY-project/diversify-demos</a>. </li>  
-    <li><strong>Demo of a smart application for urban routing.</strong> We have implemented an application on top of <a href="https://graphhopper.com/">GraphHopper</a> to provide routing information, considering environmental data gathered through participatory sensing: <a href="https://github.com/DIVERSIFY-project/SMART-GH">GreenWay</a>. </li>  
-    <li><strong>Source code diversity synthesis.</strong> We experiment a novel form of software diversification, which consists in synthesizing variants of a program, which exhibit the same expected behavior, but have different implementations. These variants are called sosies and the sosie synthesis prototype is based on AST rewriting: <a href="https://github.com/DIVERSIFY-project/sosies-generator">https://github.com/DIVERSIFY-project/sosies-generator</a>. 
-      The programs that we use for sosiefication are available <a href=" http://diversify-project.eu/sosified-programs/">here</a>.
-      </li>
-    <li><strong>Diversity controller.</strong> This is a tool that implements different strategies to control the emergence of diversity in a software architecture model: <a href="https://github.com/DIVERSIFY-project/disco">Disco</a>. </li> 
-        <li><strong>Java loops perforation.</strong> We have implemented a prototype for loop perforation in Java programs: <a href="https://github.com/DIVERSIFY-project/loop-perforation">https://github.com/DIVERSIFY-project/loop-perforation</a>. This is based on the paper by Misailovic et al. <a href="http://www.cs.unm.edu/~forrest/classes/readings/stelios-3.pdf">Quality of service profiling</a> </li>
-    <li><strong>Diversity emergence simulation.</strong> We experiment the mergence of diversity in  bipartite software relations and the role of diversity on the robustness of software interactions, in the presence of perturbations. These experiments are performed in a multi-agent simulation platform.
-      <a href="https://github.com/DIVERSIFY-project/Diversim">https://github.com/DIVERSIFY-project/Diversim</a></li>
-  </ul>
-</p>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Simon Allier (<a href="https://github.com/simonAllier">@simonbAllier</a>), André Elie (<a href="https://github.com/aelie" class="user-mention">@aelie</a>), Olivier Barais (<a href="https://github.com/barais" class="user-mention">@barais</a>), Benoit Baudry (<a href="https://github.com/bbaudry" class="user-mention">@bbaudry</a>), Cendrine Mony (<a href="https://github.com/cendrinemony" class="user-mention">@cendrinemony</a>), Benoit Combemale (<a href="https://github.com/combemale" class="user-mention">@combemale</a>), Erwan Daubert (<a href="https://github.com/edaubert" class="user-mention">@edaubert</a>), Franck Chauvel (<a href="https://github.com/fchauvel" class="user-mention">@fchauvel</a>), Franck Fleurey (<a href="https://github.com/ffleurey" class="user-mention">@ffleurey</a>), Benoit Gauzens (@bgauzens), Johann Bourcier (<a href="https://github.com/jbourcie" class="user-mention">@jbourcie</a>), Kwaku Yeboah-Antwi (<a href="https://github.com/Killeroid" class="user-mention">@Killeroid</a>), Marco Biazzini (@marbiaz), Carlos Melian (@melian009), Martin Monperrus (@monperrus), Myriam David (@myrdavid), Hui Song (@songhui), Vivek Nallur (<a href="https://github.com/viveknallur">@viveknallur</a>), Amal Elgammal(<a href="https://github.com/aelgammal">@aelgammal</a>)</p>
 
-      </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
 
-    
 
-  </body>
-</html>
+
+
+
+
+
+
+
+<link rel="stylesheet" type="text/css" href="index.css" media="all">
+</head>
+<body class="short-header  wsite-theme-light wsite-page-index">
+<div id="wrapper">
+	<div class="bg-wrapper">
+		<div id="header">
+			<div id="sitename"><span class="wsite-logo"><span class="wsite-title-placeholder">&nbsp;</span><span style="display: none;">Mon site</span></span></div>
+		</div>
+		<div id="navigation"><ul class="wsite-menu-default"><li class="wsite-nav-0" style="position: relative;" id="active"><a indepth="true" style="position: relative;" href="index.html">DiverSE</a></li><li class="wsite-nav-1" style="position: relative;" id="pg356375172718287883"><a indepth="true" style="position: relative;" href="diversification-toolbox.html" data-membership-required="0">Diversification Toolbox</a></li><li class="wsite-nav-2" style="position: relative;" id="pg285996659219943654"><a indepth="true" style="position: relative;" href="contributors_001.html" data-membership-required="0">Contributors</a></li></ul></div>
+		<div class="banner-wrap wsite-background wsite-custom-background"></div>
+		<div id="content-wrapper">
+			<div id="content"><div id="wsite-content" class="wsite-elements wsite-not-footer">
+<h2 class="wsite-content-title" style="text-align: left;"><span style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"> The DIVERSIFY-project organization</span></span></span></span></span></span></h2>
+
+<div class="paragraph" style="text-align: left;"><span style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(142, 142, 142);"><ul><li style=""><font color="#3f3f3f"><strong style="">Demo of stacked diversity.</strong> We have deployed a JS application that runs on top of a diversified web server: <a style="" href="https://github.com/DIVERSIFY-project/diversify-demos">https://github.com/DIVERSIFY-project/diversify-demos</a>. </font></li><li style=""><font color="#3f3f3f"><strong style="">Demo of a smart application for urban routing.</strong> We have implemented an application on top of <a style="" href="https://graphhopper.com/">GraphHopper</a> to provide routing information, considering environmental data gathered through participatory sensing: <a style="" href="https://github.com/DIVERSIFY-project/SMART-GH">GreenWay</a>. </font></li><li style=""><font color="#3f3f3f"><strong style="">Source code diversity synthesis.</strong> We experiment a  novel form of software diversification, which consists in synthesizing  variants of a program, which exhibit the same expected behavior, but  have different implementations. These variants are called sosies and the  sosie synthesis prototype is based on AST rewriting: <a style="" href="https://github.com/DIVERSIFY-project/sosies-generator">https://github.com/DIVERSIFY-project/sosies-generator</a>.        The programs that we use for sosiefication are available <a style="" href="http://diversify-project.eu/sosified-programs/">here</a>.       </font></li><li style=""><font color="#3f3f3f"><strong style="">Diversity controller.</strong> This is a tool that implements different strategies to control the emergence of diversity in a software architecture model: <a style="" href="https://github.com/DIVERSIFY-project/disco">Disco</a>. </font></li><li style=""><font color="#3f3f3f"><strong style="">Java loops perforation.</strong> We have implemented a prototype for loop perforation in Java programs: <a style="" href="https://github.com/DIVERSIFY-project/loop-perforation">https://github.com/DIVERSIFY-project/loop-perforation</a>. This is based on the paper by Misailovic et al. <a style="" href="http://www.cs.unm.edu/%7Eforrest/classes/readings/stelios-3.pdf">Quality of service profiling</a></font> </li><li style=""><font color="#3f3f3f"><strong style="">Diversity emergence simulation.</strong> We experiment  the mergence of diversity in  bipartite software relations and the role  of diversity on the robustness of software interactions, in the presence  of perturbations. These experiments are performed in a multi-agent  simulation platform.       <a style="" href="https://github.com/DIVERSIFY-project/Diversim">https://github.com/DIVERSIFY-project/Diversim</a></font></li></ul></span></div></div>
+</div>
+		</div>
+	</div>
+	
+</div>
+
+
+
+
+
+<!-- Quantcast Tag -->
+
+
+
+<!-- End Quantcast tag -->
+
+
+
+
+
+<div id="wsite-menus"></div>
+
+
+</body></html>
