image and diverse change

--- a/diversification-toolbox.html
+++ b/diversification-toolbox.html
@@ -35,7 +35,7 @@
 		<div id="header">
 			<div id="sitename"><span class="wsite-logo"><span class="wsite-title-placeholder">&nbsp;</span><span style="display: none;">Mon site</span></span></div>
 		</div>
-		<div id="navigation"><ul class="wsite-menu-default"><li id="pg684477500933798836"><a href="index.html" data-membership-required="0">DiverSE</a></li><li id="active"><a href="diversification-toolbox.html">Diversification Toolbox</a></li><li id="pg285996659219943654"><a href="contributors_001.html" data-membership-required="0">Contributors</a></li></ul></div>
+		<div id="navigation"><ul class="wsite-menu-default"><li id="pg684477500933798836"><a href="index.html" data-membership-required="0">Diversify</a></li><li id="active"><a href="diversification-toolbox.html">Diversification Toolbox</a></li><li id="pg285996659219943654"><a href="contributors_001.html" data-membership-required="0">Contributors</a></li></ul></div>
 		<div class="banner-wrap wsite-background wsite-custom-background"></div>
 		<div id="content-wrapper">
 			<div id="content"><div id="wsite-content" class="wsite-elements wsite-not-footer">
