--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>Mon site - DiverSE</title>
+<title>Diversify github</title>
 <meta property="og:site_name" content="Mon site">
 <meta property="og:title" content="Mon site">
 <meta property="og:description" content="Demo of stacked diversity. We have deployed a JS application that runs on top of a diversified web server: https://github.com/DIVERSIFY-project/diversify-demos . Demo of a smart application for urban...">
@@ -32,7 +32,7 @@
 		<div id="header">
 			<div id="sitename"><span class="wsite-logo"><span class="wsite-title-placeholder">&nbsp;</span><span style="display: none;">Mon site</span></span></div>
 		</div>
-		<div id="navigation"><ul class="wsite-menu-default"><li class="wsite-nav-0" style="position: relative;" id="active"><a indepth="true" style="position: relative;" href="index.html">DiverSE</a></li><li class="wsite-nav-1" style="position: relative;" id="pg356375172718287883"><a indepth="true" style="position: relative;" href="diversification-toolbox.html" data-membership-required="0">Diversification Toolbox</a></li><li class="wsite-nav-2" style="position: relative;" id="pg285996659219943654"><a indepth="true" style="position: relative;" href="contributors_001.html" data-membership-required="0">Contributors</a></li></ul></div>
+		<div id="navigation"><ul class="wsite-menu-default"><li class="wsite-nav-0" style="position: relative;" id="active"><a indepth="true" style="position: relative;" href="index.html">Diversify</a></li><li class="wsite-nav-1" style="position: relative;" id="pg356375172718287883"><a indepth="true" style="position: relative;" href="diversification-toolbox.html" data-membership-required="0">Diversification Toolbox</a></li><li class="wsite-nav-2" style="position: relative;" id="pg285996659219943654"><a indepth="true" style="position: relative;" href="contributors_001.html" data-membership-required="0">Contributors</a></li></ul></div>
 		<div class="banner-wrap wsite-background wsite-custom-background"></div>
 		<div id="content-wrapper">
 			<div id="content"><div id="wsite-content" class="wsite-elements wsite-not-footer">
