--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span
                             style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span
                             style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span
-                            style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"> The DIVERSIFY-project organization</span></span></span></span></span></span>
+                            style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"> DIVERSIFY Developments and tools</span></span></span></span></span></span>
                     </h2>
 
                     <div class="paragraph" style="text-align: left;"><span
