--- a/contributors_001.html
+++ b/contributors_001.html
@@ -33,7 +33,7 @@
 			<div id="sitename"><span class="wsite-logo"><span style="display: none;">Mon site</span></span></div>
 		</div>
 		<div id="navigation"><ul class="wsite-menu-default"><li id="pg684477500933798836"><a indepth="true" href="index.html" data-membership-required="0">DiverSE</a></li><li id="pg356375172718287883"><a indepth="true" href="diversification-toolbox.html" data-membership-required="0">Diversification Toolbox</a></li><li id="active"><a indepth="true" href="contributors_001.html">Contributors</a></li></ul></div>
-		<div class="banner-wrap wsite-background wsite-custom-background"></div>
+		<!-- <div class="banner-wrap wsite-background wsite-custom-background"></div> -->
 		<div id="content-wrapper">
 			<div id="content"><div id="wsite-content" class="wsite-elements wsite-not-footer">
 <div class="paragraph" style="text-align: left;"><span style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(142, 142, 142);">Simon Allier (<a href="https://github.com/simonAllier">@simonbAllier</a>), André Elie (<a href="https://github.com/aelie">@aelie</a>), Olivier Barais (<a href="https://github.com/barais">@barais</a>), Benoit Baudry (<a href="https://github.com/bbaudry">@bbaudry</a>), Cendrine Mony (<a href="https://github.com/cendrinemony">@cendrinemony</a>), Benoit Combemale (<a href="https://github.com/combemale">@combemale</a>), Erwan Daubert (<a href="https://github.com/edaubert">@edaubert</a>), Franck Chauvel (<a href="https://github.com/fchauvel">@fchauvel</a>), Franck Fleurey (<a href="https://github.com/ffleurey">@ffleurey</a>), Benoit Gauzens (@bgauzens), Johann Bourcier (<a href="https://github.com/jbourcie">@jbourcie</a>), Kwaku Yeboah-Antwi (<a href="https://github.com/Killeroid">@Killeroid</a>),
