cambio de mi link

--- a/contributors_001.html
+++ b/contributors_001.html
@@ -39,7 +39,7 @@
 <div class="paragraph" style="text-align: left;"><span style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(142, 142, 142);">Simon Allier (<a href="https://github.com/simonAllier">@simonbAllier</a>), André Elie (<a href="https://github.com/aelie">@aelie</a>), Olivier Barais (<a href="https://github.com/barais">@barais</a>), Benoit Baudry (<a href="https://github.com/bbaudry">@bbaudry</a>), Cendrine Mony (<a href="https://github.com/cendrinemony">@cendrinemony</a>), Benoit Combemale (<a href="https://github.com/combemale">@combemale</a>), Erwan Daubert (<a href="https://github.com/edaubert">@edaubert</a>), Franck Chauvel (<a href="https://github.com/fchauvel">@fchauvel</a>), Franck Fleurey (<a href="https://github.com/ffleurey">@ffleurey</a>), Benoit Gauzens (@bgauzens), Johann Bourcier (<a href="https://github.com/jbourcie">@jbourcie</a>), Kwaku Yeboah-Antwi (<a href="https://github.com/Killeroid">@Killeroid</a>),
  Marco Biazzini (@marbiaz), Carlos Melian (@melian009), Martin Monperrus
  (@monperrus), Myriam David (@myrdavid), Hui Song (@songhui), Vivek 
-Nallur (<a href="https://github.com/viveknallur">@viveknallur</a>), Amal Elgammal(<a href="https://github.com/aelgammal">@aelgammal</a>), Marcelino Rodriguez Cancio(<a href="https://github.com/aelgammal">@marcelinorc</a>)</span></div></div>
+Nallur (<a href="https://github.com/viveknallur">@viveknallur</a>), Amal Elgammal(<a href="https://github.com/aelgammal">@aelgammal</a>), Marcelino Rodriguez Cancio(<a href="https://github.com/marcelinorc">@marcelinorc</a>)</span></div></div>
 </div>
 		</div>
 	</div>
