Test amplification suite

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Mon site">
     <meta property="og:description"
           content="Demo of stacked diversity. We have deployed a JS application that runs on top of a diversified web server: https://github.com/DIVERSIFY-project/diversify-demos . Demo of a smart application for urban...">
-    <meta property="og:url" content="http://testdiverse.weebly.com/">
+    
 
 
     <link rel="stylesheet" type="text/css" href="index.css" media="all">
@@ -30,6 +30,12 @@
                                                                                                  href="diversification-toolbox.html"
                                                                                                  data-membership-required="0">Diversification
                     Toolbox</a></li>
+	            <li class="wsite-nav-2" style="position: relative;" id="pg285996659219943654"><a indepth="true"
+                                                                                                 style="position: relative;"
+                                                                                                 href="test-suite-amplification.html"
+                                                                                                 data-membership-required="0">Test suite amplification</a>
+                </li>
+    
                 <li class="wsite-nav-2" style="position: relative;" id="pg285996659219943654"><a indepth="true"
                                                                                                  style="position: relative;"
                                                                                                  href="contributors_001.html"
