--- a/index.html
+++ b/index.html
@@ -45,16 +45,9 @@
         </div>
         <div class="banner-wrap wsite-background wsite-custom-background"></div>
         <div id="content-wrapper">
-            <div id="content">
+            <div id="content>"diversi
                 <div id="wsite-content" class="wsite-elements wsite-not-footer">
-                    <h2 class="wsite-content-title" style="text-align: left;"><span
-                            style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span
-                            style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span
-                            style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span
-                            style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span
-                            style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"><span
-                            style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(72, 72, 72);"> DIVERSIFY Developments and tools</span></span></span></span></span></span>
-                    </h2>
+                    This page presens the tools of the <a href="http://diversify-project.eu/">Diversify EU research project</a>. The official webpage is <a href="http://diversify-project.eu/">http://diversify-project.eu/</a>
 
                     <div class="paragraph" style="text-align: left;"><span
                             style="text-decoration: none; font-style: normal; font-weight: 400; color: rgb(142, 142, 142);"><ul>
